# qrFindbyQuaOuter

./: CMakeLists.txt  imageUtils.cpp  imageUtils.h  main.cpp
